--- a/src/assets/scss/blocks/app.scss
+++ b/src/assets/scss/blocks/app.scss
@@ -1,14 +1,71 @@
 .app {
-  background-size: 100% 100%;
+  position: relative;
+
   width: 100%;
   height: 100vh;
-  padding: rem(89) rem(145);
+
   background-color: #446684;
+  background-size: cover;
 }
 
 .overlay {
+  @include display(flex, space-between, stretch);
+  flex-direction: column;
+  position: absolute;
+
+  width: rem(1600);
+  height: rem(825);
+  max-width: rem(1600);
+  max-height: rem(825);
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   background: rgba(80, 80, 80, 0.3);
   backdrop-filter: blur(5px);
-  padding: 20px;
-  border-radius: 20px;
+
+  padding: rem(20);
+  border-radius: rem(20);
+
+  @include mq('desktop-wide') {
+    width: rem(1200);
+    max-width: rem(1200);
+    height: rem(625);
+    max-height: rem(625);
+  }
+
+  @include mq('tablet-wide') {
+    width: rem(800);
+    max-width: rem(800);
+  }
+
+  @include mq('tablet') {
+    width: rem(650);
+    max-width: rem(650);
+    height: rem(700);
+    max-height: rem(700);
+  }
+
+  @include mq('tablet-small') {
+    width: rem(550);
+    max-width: rem(550);
+  }
+
+  @include mq('phablet') {
+    width: rem(450);
+    max-width: rem(450);
+  }
+
+  @include mq('phone-wide') {
+    width: rem(400);
+    max-width: rem(400);
+  }
+
+  @include mq('phone') {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+  }
 }
