--- a/src/assets/scss/blocks/input.scss
+++ b/src/assets/scss/blocks/input.scss
@@ -6,10 +6,23 @@
       @include pseudo();
       background-image: url('../img/search.svg');
       background-size: rem(28) rem(28);
+
       height: rem(28);
       width: rem(28);
+
       left: rem(23);
       top: rem(-6);
+
+      @include mq('tablet') {
+        background-size: rem(22) rem(22);
+
+        height: rem(22);
+        width: rem(22);
+      }
+
+      @include mq('tablet-small') {
+        background-image: none;
+      }
     }
   }
 
@@ -17,17 +30,64 @@
     @include font-sans(rem(18), $main-color, 400, normal);
     width: rem(484);
     height: rem(39);
+
     padding-left: rem(69);
     padding-bottom: rem(12);
+
     appearance: none;
     border-top: none;
     border-left: none;
     border-right: none;
     background: none;
+
     border-bottom: 1px solid $main-color;
+
+    @include mq('desktop-wide') {
+      width: rem(350);
+      font-size: rem(16);
+    }
+
+    @include mq('tablet-wide') {
+      width: rem(300);
+      font-size: rem(14);
+    }
+
+    @include mq('tablet') {
+      width: rem(250);
+    }
+
+    @include mq('tablet-small') {
+      width: rem(200);
+      padding-left: rem(40);
+      padding-bottom: rem(0);
+    }
+
+    @include mq('phablet') {
+      width: rem(150);
+      padding-left: rem(20);
+    }
+
+    @include mq('phone-wide') {
+      width: 100%;
+      padding-left: rem(48);
+      margin-bottom: rem(15);
+    }
 
     &::placeholder {
       @include font-sans(rem(18), $main-color, 400, normal);
+
+      @include mq('desktop-wide') {
+        font-size: rem(16);
+      }
+
+      @include mq('tablet-wide') {
+        font-size: rem(14);
+      }
+
+      @include mq('tablet-small') {
+        font-size: rem(12);
+        font-weight: normal;
+      }
     }
   }
 }
