add the function of getting the address for the background imagе

--- a/src/assets/scss/blocks/app.scss
+++ b/src/assets/scss/blocks/app.scss
@@ -6,6 +6,9 @@
 
   background-color: #446684;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 .overlay {
