--- a/src/assets/scss/blocks/app.scss
+++ b/src/assets/scss/blocks/app.scss
@@ -3,12 +3,15 @@
 
   width: 100%;
   height: 100vh;
-
   background-color: #446684;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
+
+  @media only screen and (max-height: 768px) and (orientation: landscape) {
+    height: 100vw;
+  }
 }
 
 .overlay {
@@ -25,7 +28,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background: rgba(80, 80, 80, 0.3);
+  background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(2px);
 
   padding: rem(20);
@@ -70,5 +73,6 @@
     max-width: 100%;
     height: 100%;
     max-height: 100%;
+    border-radius: 0;
   }
 }
